# coraza-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  go.work  go.work.sum
.cargo/: config.toml
.github/scripts/: comment-ftw-results.js  gen-ftw-output.js
.github/workflows/: deploy-pages.yml  e2e.yml  rust-clippy.yml  rust.yml  test-build.yml
coraza-dynamic-module/: Cargo.toml
coraza-dynamic-module/src/: config.rs  filter.rs  lib.rs  metrics.rs
coraza-rs/: Cargo.toml
coraza-rs/src/: lib.rs
coraza-sys/: Cargo.toml  build.rs
coraza-sys/go/libcoraza/: fs.go  go.mod  go.sum  libcoraza.go  libcoraza_test.go  log.go
coraza-sys/src/: lib.rs
e2e/: .gitignore  e2e_test.go  envoy.yaml  go.mod  go.sum
examples/: README.md  coraza.conf  docker-compose.yml  envoy.yaml  test.sh
ftw/: Dockerfile  README.md  docker-compose.yml  envoy-config.yaml  ftw-config.conf  ftw.yml  tests.sh
