[package]
name = "coraza-dynamic-module"
version = "0.1.0"
edition = "2024"

[dependencies]
coraza-rs = { version = "~0.1.0", path = "../coraza-rs"}
envoy-proxy-dynamic-modules-rust-sdk.workspace = true
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smallvec.workspace = true
strum = { workspace = true, features = ["derive"] }
tap.workspace = true

[lib]
name = "dynamic_module"
path = "src/lib.rs"
crate-type = ["cdylib"]
