[package]
name = "coraza-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
coraza-sys = { version = "~0.1.0", path = "../coraza-sys" }
http.workspace = true
parking_lot.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
